[package]
name = "gtksourceview"
version = "0.1.0"
authors = ["Antoni Boucher <antoni.boucher@adgear.com>"]

[lib]
name = "gtk"

[features]
v3_10 = ["gtksourceview-sys/v3_10"]
v3_12 = ["v3_10", "gtksourceview-sys/v3_12"]
v3_14 = ["v3_12", "gtksourceview-sys/v3_14"]
v3_16 = ["v3_14", "gtksourceview-sys/v3_16"]
v3_18 = ["v3_16", "gtksourceview-sys/v3_18"]
v3_20 = ["v3_18", "gtksourceview-sys/v3_20"]
v3_22 = ["v3_20", "gtksourceview-sys/v3_22"]

[dependencies]
libc = "0.2"
bitflags = "0.5"
gio-sys = "^0.3.4"
glib-sys = "^0.3.4"
gobject-sys = "^0.3.4"
gtk-sys = "^0.3.4"
cairo-rs = "^0.1.3"
gio = "^0.1.3"
glib = "^0.1.3"
gdk = "^0.5.3"
gdk-pixbuf = "^0.1.3"
pango = "^0.1.3"

[dependencies.gtksourceview-sys]
path = "../gtksourceview-sys"
