[package]
authors = ["Antoni Boucher <antoni.boucher@adgear.com>"]
name = "gtksourceview"
version = "0.1.0"

[dependencies]
atk-sys = "^0.3.4"
bitflags = "^0.8.2"
cairo-rs = "^0.1.3"
gdk = "^0.5.3"
gdk-pixbuf = "^0.1.3"
gdk-sys = "^0.3.4"
gio-sys = "^0.3.4"
glib = "^0.1.3"
glib-sys = "^0.3.4"
gobject-sys = "^0.3.4"
gtk = "^0.1.3"
gtk-sys = "^0.3.4"
libc = "^0.2.22"
pango = "^0.1.3"

[dependencies.gio]
path = "/home/antoni/Telechargements/Source/gtk-rs/gio"

[dependencies.gtksourceview-sys]
path = "../gtksourceview-sys"

[features]
v3_10 = ["gtksourceview-sys/v3_10"]
v3_12 = ["v3_10", "gtksourceview-sys/v3_12"]
v3_14 = ["v3_12", "gtksourceview-sys/v3_14"]
v3_16 = ["v3_14", "gtksourceview-sys/v3_16"]
v3_18 = ["v3_16", "gtksourceview-sys/v3_18"]
v3_20 = ["v3_18", "gtksourceview-sys/v3_20"]
v3_22 = ["v3_20", "gtksourceview-sys/v3_22"]

[lib]
name = "gtksourceview"
